# adiosvm

./: .clang-format  .gitignore  README-for-ADIOS2.txt  README-v1.9-Ubuntu.txt  README.ADIOS2  README.md  README.txt  softiwarp.install  softiwarp.setup  ssh_config  test_pbdR.r  vimrc
Tutorial/01_write_read/: Makefile  mpi  plot_writer.sh  reader.F90  writer.xml
Tutorial/02_noxml/: Makefile  adios_global_no_xml.c
Tutorial/03_staging/: Makefile  adios.xml  arrays_read.c  plot.sh
Tutorial/05_skel/writer/: Makefile  skel_time.xml  writer.xml  writer_skel.xml
Tutorial/brusselator/: .gitignore  Makefile  README  analysis.cpp  brusselator.f90  getgrid.f90  savedata.f90
Tutorial/brusselator/2decomp_fft/: INSTALL  README
Tutorial/brusselator/analysis/: Makefile  analysis.cpp
Tutorial/brusselator/simulation/: Makefile  adios2_config.xml  brusselator.f90
Tutorial/brusselator/src/: .gitignore  Makefile  Makefile.inc  README  adios2.xml  adios2_config.xml
Tutorial/bugs/buginxml/: Makefile  README  bug3.xml
Tutorial/bugs/triplebugs/: Makefile
Tutorial/cpp_1d/: Makefile  job.summit.nvram  job.summit.pfs  make.settings  reader.cpp  writer.cpp  writer.xml
Tutorial/gray-scott/: CMakeLists.txt  README.md  adios2.xml  cleanup.sh  run.sh  run_vis.sh  visit-bp.session  visit-bp.session.gui  visit-bp4.session  visit-bp4.session.gui  visit-sst.session  visit-sst.session.gui
Tutorial/gray-scott/analysis/: CMakeLists.txt  block-isosurface.cpp  curvature.cpp  find_blobs.cpp  isosurface.cpp  lib-isosurface.cpp  lib-isosurface.h  libIsoSurface.cpp  mainIsoSurface.cpp  pdf_calc.cpp
Tutorial/gray-scott/catalyst/: gs-pipeline.py
Tutorial/gray-scott/plot/: decomp.py  gsplot.py  pdfplot.py  render_isosurface.cpp
Tutorial/gray-scott/simulation/: CMakeLists.txt  README.md  gray-scott.cpp  gray-scott.h  main.cpp  settings-files.json  settings-inline.json  settings-staging.json  settings.cpp  settings.h  settings.json  writer.cpp  writer.h
Tutorial/gs-adios2/: CMakeLists.txt  README.md
Tutorial/gs-adios2/analysis/: pdf_calc.cpp
Tutorial/gs-adios2/plot/: gsplot.py  gsplot_rra.py  gsread_mpi.py
Tutorial/gs-adios2/simulation/: main.cpp  settings-files.json  settings-staging.json  writer.cpp  writer.h
Tutorial/gs-mpiio/: CMakeLists.txt  README.md  adios2.xml  cleanup.sh
Tutorial/gs-mpiio/analysis/: pdf-calc.cpp
Tutorial/gs-mpiio/plot/: gsplot.py  gsread_mpi.py
Tutorial/gs-mpiio/simulation/: main.cpp  settings-files.json  settings.h  writer.cpp  writer.h
Tutorial/gs-noio/: CMakeLists.txt  HOWTO-adios.md  README.md  adios2.xml
Tutorial/gs-noio/analysis/: pdf-calc.cpp  pdf_calc.cpp
Tutorial/gs-noio/simulation/: main.cpp  settings-files.json  settings-staging.json  settings.cpp  writer.cpp  writer.h
Tutorial/heat2d/cpp/: Makefile  ReadMe.md  adios2.xml  make.settings
Tutorial/heat2d/fortran/: Makefile  README  README.MixedDemo  adios1.xml  adios2.xml  make.settings
Tutorial/heat2d/fortran/query/: Makefile  (+1 more)
Tutorial/heat2d/python/: decomp.py  heat_all.py  heat_plot.py
Tutorial/heat_transfer/: .gitignore  Makefile  README  adios1.xml  adios2.xml  heat_transfer.F90  heat_transfer.py  heat_transfer.xml  heat_vars.F90  io_adios.F90  io_adios2.F90  io_adios_gpp.F90  io_adios_noxml.F90  io_fort.F90  io_hdf5.F90  io_hdf5_a.F90  io_hdf5_b.F90  io_phdf5.F90  make.settings  plot_T.sh  plot_heat.sh
Tutorial/heat_transfer/R/: README  clean.sh  test_heat.r
Tutorial/heat_transfer/analysis/: Makefile  heat_read_adios2.F90  heat_read_adios2_file.F90  heat_read_adios2_stream.F90  heat_read_hdf5.F90  heat_read_steps2.F90
Tutorial/heat_transfer/dataspaces/: heat_transfer.xml  job
Tutorial/heat_transfer/matlab/: README
Tutorial/heat_transfer/python/: README  heat_read.py  heat_read_mpi.py
Tutorial/heat_transfer/query/: Makefile  plot_range.sh  test_range.c  test_range.xml  utils.c
Tutorial/heat_transfer/read/: Makefile  heat_read_adios.F90  heat_read_adios1.F90  heat_read_adios2.F90  heat_read_hdf5.F90  heat_read_steps1.F90  heat_read_steps2.F90  print.F90
Tutorial/heat_transfer/simulation/: Makefile  heat_transfer.F90  heat_vars.F90  io_adios1.F90  io_adios1_gpp.F90  io_adios2.F90  io_phdf5.F90
Tutorial/heat_transfer/stage_write/: Makefile  stage_write.c
Tutorial/schema/: Makefile  tri2d.xml
Tutorial/visit/data/: ._continent.dbf  ._continent.shp  avg_temp.visit  rect2d.silo  rect3d.silo  sedov.visit  tgvortex.mir  torus_mat.silo  varying.visit  wave.visit
Tutorial/visit/scripts/: listing_1_setting_attributes.py  listing_2_animating_an_isosurface.py  listing_3_using_visits_building_blocks.py  listing_4_animating_the_camera.py  listing_5_automating_data_analysis.py
adiospackages/: isobar.0.3.0.tgz  runconf.adios1  runconf.adios2  runconf.adiosvm  test_dataspaces.txt
heat_stability/: CMakeLists.txt  ReadMe.md  heat_bp5.xml  heat_bp5_mgard.xml  heat_bp5_zfp.xml  plot_error.py  plot_heat.py
heat_stability/write/: CMakeLists.txt  HeatTransfer.cpp  HeatTransfer.h  IO.h  IO_adios2.cpp  Settings.cpp  Settings.h  main.cpp
linuxpackages/: gtags.vim
oldtutorial/01_write_read/: Makefile  writer.F90  writer.xml
oldtutorial/02_noxml/: Makefile  plot_global.sh  plot_writer.sh  writer_noxml.F90
oldtutorial/03_staging/: README.txt  arrays_write.c
oldtutorial/05_skel/: grapes.xml  writer_params.xml
oldtutorial/05_skel/writer/: writer.xml  writer_skel.xml
oldtutorial/bugs/buginxml/: Makefile  bug1.xml  plot_buginxml.sh
oldtutorial/cpp_1d/: make.settings  reader.cpp  writer.cpp
oldtutorial/heat_transfer/: Makefile  README  dataspaces.conf  io_adios_noxml.F90  io_fort.F90  job.dataspaces  job.dataspaces.summit  make.settings
oldtutorial/heat_transfer/R/: clean.sh  partition.r  test_heat.r
oldtutorial/heat_transfer/matlab/: reader.m
oldtutorial/heat_transfer/python/: README  bpls.py
oldtutorial/schema/: Makefile  tri2d.xml
scripts/: Dockerfile  conda_setup.sh
xgc-f0-compression/: .clang-format  CMakeLists.txt  adios2.xml  nrmse.cpp  xgc-f0-compression-adioscompression.cpp  xgc-f0-compression-cpu.cpp  xgc-f0-compression-vec.cpp  xgc-f0-compression.cpp
(+499 files in other folders)
